Fix- layout issue in about-tips section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -570,6 +570,7 @@ section#about {
 
 .about-tip {
   flex-direction: column;
+  flex: 1;
 }
 
 #virtual-classes {
